--- a/.classpath
+++ b/.classpath
@@ -10,10 +10,6 @@
 	<classpathentry kind="lib" path="lib/httpclient-4.3.5.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="D:/jiezhou/workspace/sms/lib/ch-rxtx-2.2-20081207-win-x64/RXTXcomm.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="sms/lib/ch-rxtx-2.2-20081207-win-x64"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/ch-rxtx-2.2-20081207-win-x64/RXTXcomm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
