--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-			<version>1.5.1</version>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.pi4j</groupId>
