--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 					<target />
 				</configuration>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>2.22.1</version>
+        	</plugin>
 		</plugins>
 	</build>
 	<properties>
@@ -52,5 +57,17 @@
 			<artifactId>rxtx</artifactId>
 			<version>2.1.7</version>
 		</dependency>
+		<dependency>
+        	<groupId>org.junit.jupiter</groupId>
+        	<artifactId>junit-jupiter-api</artifactId>
+        	<version>5.4.2</version>
+        	<!-- <scope>test</scope> -->
+    	</dependency>
+    	<dependency>
+        	<groupId>org.junit.jupiter</groupId>
+        	<artifactId>junit-jupiter-engine</artifactId>
+        	<version>5.4.2</version>
+        	<!-- <scope>test</scope> -->
+    	</dependency>
 	</dependencies>
 </project>
